Round of fixes for refs, citations, and other warnings.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@176 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -335,13 +335,20 @@
       SLACcitation   = "%%CITATION = ARXIV:1408.2745;%%",
 }
 
-@ARTICLE{Papucci:2014,
-  AUTHOR       = "Michele Papucci and Alessandro Vichi and Kathryn M. Zurek",
-  TITLE        = "{Monojet versus the rest of the world I: $t$-channel models}",
-  JOURNAL      = "JHEP",
-  ISSUE        = "11",
-  PAGES        = "",
-  YEAR         = "2014",
+@article{Papucci:2014iwa,
+      author         = "Papucci, Michele and Vichi, Alessandro and Zurek, Kathryn
+                        M.",
+      title          = "{Monojet versus the rest of the world I: t-channel
+                        models}",
+      journal        = "JHEP",
+      volume         = "1411",
+      pages          = "024",
+      doi            = "10.1007/JHEP11(2014)024",
+      year           = "2014",
+      eprint         = "1402.2285",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1402.2285;%%",
 }
 @ARTICLE{Tait:2013,
   AUTHOR       = "Anthony DiFranzo and Keiko I. Nagao and Arvind Rajaraman and Tim M. P. Tait",
@@ -404,6 +411,23 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:1405.3101;%%",
 } 
+@article{Busoni:2014sya,
+      author         = "Busoni, Giorgio and De Simone, Andrea and Gramling,
+                        Johanna and Morgante, Enrico and Riotto, Antonio",
+      title          = "{On the Validity of the Effective Field Theory for Dark
+                        Matter Searches at the LHC, Part II: Complete Analysis for
+                        the $s$-channel}",
+      journal        = "JCAP",
+      volume         = "1406",
+      pages          = "060",
+      doi            = "10.1088/1475-7516/2014/06/060",
+      year           = "2014",
+      eprint         = "1402.1275",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SISSA-04-2014-FISI",
+      SLACcitation   = "%%CITATION = ARXIV:1402.1275;%%",
+}
 @article{Busoni:2013lha,
       author         = "Busoni, Giorgio and De Simone, Andrea and Morgante,
                         Enrico and Riotto, Antonio",
@@ -910,4 +934,91 @@
 	reportNumber   = "CERN-TH-2014-019, DESY-14-010, KCL-PH-TH-2014-04,
 	MCTP-14-03",
 	SLACcitation   = "%%CITATION = ARXIV:1402.0492;%%",
+}
+
+
+@article{Weiner:2012cb,
+      author         = "Weiner, Neal and Yavin, Itay",
+      title          = "{How Dark Are Majorana WIMPs? Signals from MiDM and
+                        Rayleigh Dark Matter}",
+      journal        = "Phys.Rev.",
+      volume         = "D86",
+      pages          = "075021",
+      doi            = "10.1103/PhysRevD.86.075021",
+      year           = "2012",
+      eprint         = "1206.2910",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1206.2910;%%",
+}
+@article{Weiner:2012gm,
+      author         = "Weiner, Neal and Yavin, Itay",
+      title          = "{UV completions of magnetic inelastic and Rayleigh dark
+                        matter for the Fermi Line(s)}",
+      journal        = "Phys.Rev.",
+      number         = "2",
+      volume         = "D87",
+      pages          = "023523",
+      doi            = "10.1103/PhysRevD.87.023523",
+      year           = "2013",
+      eprint         = "1209.1093",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1209.1093;%%",
+}
+@article{Liu:2013gba,
+      author         = "Liu, Jia and Shuve, Brian and Weiner, Neal and Yavin,
+                        Itay",
+      title          = "{Looking for new charged states at the LHC: Signatures of
+                        Magnetic and Rayleigh Dark Matter}",
+      journal        = "JHEP",
+      volume         = "1307",
+      pages          = "144",
+      doi            = "10.1007/JHEP07(2013)144",
+      year           = "2013",
+      eprint         = "1303.4404",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1303.4404;%%",
+}
+@article{Craig:2013hca,
+      author         = "Craig, Nathaniel and Galloway, Jamison and Thomas, Scott",
+      title          = "{Searching for Signs of the Second Higgs Doublet}",
+      year           = "2013",
+      eprint         = "1305.2424",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "RU-NHETC-2013-07",
+      SLACcitation   = "%%CITATION = ARXIV:1305.2424;%%",
+}
+@article{Daylan:2014rsa,
+      author         = "Daylan, Tansu and Finkbeiner, Douglas P. and Hooper, Dan
+                        and Linden, Tim and Portillo, Stephen K. N. and others",
+      title          = "{The Characterization of the Gamma-Ray Signal from the
+                        Central Milky Way: A Compelling Case for Annihilating Dark
+                        Matter}",
+      year           = "2014",
+      eprint         = "1402.6703",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      reportNumber   = "FERMILAB-PUB-14-032-A, MIT-CTP-4533",
+      SLACcitation   = "%%CITATION = ARXIV:1402.6703;%%",
+}
+@article{Aad:2014vea,
+      author         = "Aad, G. and others",
+      title          = "{Search for dark matter in events with heavy quarks and
+                        missing transverse momentum in $pp$ collisions with the
+                        ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "Eur.Phys.J.",
+      number         = "2",
+      volume         = "C75",
+      pages          = "92",
+      doi            = "10.1140/epjc/s10052-015-3306-z",
+      year           = "2015",
+      eprint         = "1410.4031",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-229",
+      SLACcitation   = "%%CITATION = ARXIV:1410.4031;%%",
 }
