--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -269,7 +269,7 @@
 %\fi 
 
 %\ifNotMonojetTTBarOnly
-\chapter{Appendix: Table of cross sections for $t\bar{t}$+MET searches}
+\chapter{\texorpdfstring{Appendix: Table of cross sections for $t\bar{t}$+MET searches}{Appendix: Table of cross sections for  ttbar+MET searches}}
 \label{app:TTBar_Xsecs}
 \input{tex/TTBar_Xsecs_Appendix.tex}
 %\fi 
