--- a/doc/tex/DMHFModels.tex
+++ b/doc/tex/DMHFModels.tex
@@ -1,16 +1,16 @@
-\section{$t \bar{t}$+MET models}
+\section{\texorpdfstring{$t \bar{t}$+MET models}{ttbar+MET models}}
 
 \input{tex/TTBar.tex}
 
- \section{$b \bar{b}$+MET models}
+ \section{\texorpdfstring{$b \bar{b}$+MET models}{bbbar+MET models}}
  
  \input{tex/BBBar.tex}
 
-\section{Models with a single $top-$quark + MET}
+\section{\texorpdfstring{Models with a single $top-$quark + MET}{Models with a single top-quark + MET}}
 
 \input{tex/SingleTop.tex}
  
- \section{Models with a single $b-$quark + MET}
+ \section{\texorpdfstring{Models with a single $b-$quark + MET}{Models with a single b-quark + MET}}
  
  \input{tex/SingleB.tex}
 
