--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -27,7 +27,7 @@ is even applicable.
 Here we summarise some methods that can be used to ensure the validity of the EFT approximation. These methods are described in detail in Refs.~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}. We then propose a recommendation for the presentation of EFT results for Run-2 LHC benchmarks.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Outline of the procedure described in Refs.~\cite{Busoni:2014sya,Aad:2015zva}}
+\section{\texorpdfstring{Outline of the procedure described in Refs.~\cite{Busoni:2014sya,Aad:2015zva}}{Outline of the procedure described in Refs.}}
 \label{sec:TruncationWithQTr}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -56,7 +56,7 @@ If a search is not simply a counting experiment and exploits the shapes of kinem
 \clearpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Outline of the procedure described in Ref.~\cite{Racco:2015dxa}}
+\section{\texorpdfstring{Outline of the procedure described in Ref.~\cite{Racco:2015dxa}}{Outline of the procedure described in Refs.}}
 \label{sec:TruncationWithSHat}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -110,7 +110,7 @@ For this reason, experimental collaboration should deliver results for high-mass
 pure EFT results, and leave further reinterpretation to theorists.  
 
 We therefore recommend the addition of one point at very high mediator mass (5 TeV) to the scan, for each of the DM masses
-for the simplified models described in Section~\ref{subsec:MonojetLikeModel}. The truncation procedure in Section~\ref{sec:TruncationWithSHat} can be used to fine-tune the mediator mass to be simulated for this purpose:
+for the simplified models described in Section~\ref{subsec:MonojetLikeModels}. The truncation procedure in Section~\ref{sec:TruncationWithSHat} can be used to fine-tune the mediator mass to be simulated for this purpose:
 studies are ongoing for $s-$channel vector mediators. 
 
 \Todo{Is this sufficient information for reinterpretation, or should we have instructions?}
