--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -14,7 +14,7 @@ Here, we only keep the left-handed quarks because the right-handed quarks do not
 \frac{c_6}{\Lambda^2}\overline{\chi} \gamma_\mu \chi \,\overline{Q}_L \gamma^\mu Q_L 
 \end{equation}
 %
-conserves iso-spin and provides us $\xi=1$~\cite{1503.07874}. At the dimension-eight level, new operators appear to induce iso-spin violation and can be
+conserves iso-spin and provides us $\xi=1$~\cite{Bell:2015sza}. At the dimension-eight level, new operators appear to induce iso-spin violation and can be
 %
 \begin{equation}
 \frac{c^d_8}{\Lambda^4}\overline{\chi} \gamma_\mu \chi \,(H\overline{Q}_L) \gamma^\mu (Q_L H^\dagger) 
