--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -214,7 +214,7 @@ Todo{When we have the cross-sections for both, we can recommend the one with the
 
 The differences in kinematics for the various signatures
 are negligible when changing the coefficients $k_1$ and $k_2$, as shown
-in Figure~\ref{EFTD7_EW_kinematics}. Only the case $k_1=k_2=1$ is generated as benchmark;
+in Figure~\ref{fig:EFTD7_EW_kinematics}. Only the case $k_1=k_2=1$ is generated as benchmark;
 other cases are left for reinterpretation as they will only need a rescaling of the cross-sections
 shown in Appendix~\ref{app:EWSpecificModels_Appendix} for the various DM
 mass points considered.
@@ -242,7 +242,7 @@ mass points considered.
 \subsection{Higher dimensional operators}
 
 Many higher dimensional operators can induce signals of photons or $W/Z/H$ bosons
-in the final state. A complete list can be found in Refs.~\ref{Carpenter:2013xra, Berlin:2014cfa, Petrov:2013nia}
+in the final state. A complete list can be found in Refs.~\cite{Carpenter:2013xra, Berlin:2014cfa, Petrov:2013nia}
 and references therein. 
 
 Although with lower priority with respect to the operators above, 
@@ -339,7 +339,7 @@ for these models are:
 
 \begin{itemize}
 \item Assess the percentage of events that pass the EFT validity condition, and present results using a truncation of the invalid events using the procedure in Section~\ref{sec:EFTValidity} alongside pure EFT results;
-\item Deliver fiducial limits on the cross section of any new physics events, without any model assumption, according to the guidelines in Appendix~\ref{app:presentationOfResults}.  
+\item Deliver fiducial limits on the cross section of any new physics events, without any model assumption, according to the guidelines in Appendix~\ref{app:Presentation_Of_Experimental_Results}.  
 \end{itemize}
 
 \subsection{Model implementation}
