--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -60,10 +60,17 @@ are recommended for Higgs+MET searches:
 	}
 	\caption
 	{
-		Feynman diagrams of leading order processes leading to Higgs+MET events: a model with a vector mediator ($Z^\prime$) 
-		coupling with DM and with the Higgs boson $h$ \ref{subfig:modelMonoHZprimeqq}, and
+		Feynman diagrams of leading order processes leading to Higgs+MET events: 
+                (a) %%% ref doesn't seem to work here
+                a model with a vector mediator ($Z^\prime$) 
+		coupling with DM and with the Higgs boson $h$,
+%\ref{subfig:modelMonoHZprimeqq}, %%% ref doesn't seem to work here
+and
+                (b) %%% ref doesn't seem to work here
 		a 2HDM model with a new invisibly decaying pseudoscalar $A^0$ 
-		from the decay of an on-shell resonance $Z^\prime$ giving rise to a Higgs+MET signature~\ref{subfig:modelMonoHSimplifiedA0}.
+		from the decay of an on-shell resonance $Z^\prime$ giving rise to a Higgs+MET signature
+%~\ref{subfig:modelMonoHSimplifiedA0}
+.
 	}
 	\label{fig:feyn_prod_monoH}
 \end{figure}
@@ -224,7 +231,7 @@ Figure~\ref{fig:metVectorMass} shows that for an on-shell mediator,
 varying $m_{DM}$ with the other parameters fixed does not affect the MET distribution, while 
 the distribution broadens significantly in the case of an off-shell mediator. 
 For this reason, the same grid in \mmed, \mdm as for the vector mediator
-of the jet+MET search (Table~\ref{tab:mDMmmedScan_VA}) is chosen as a starting point. 
+of the jet+MET search (Table~\ref{tab:mDMmMedScan_VA}) is chosen as a starting point. 
 The coupling $g_{hZ^\prime Z^\prime}$, along with $g_q$ and $g_{DM}$, are subject to perturbativity bounds:
 $$g_q, g_\chi < 4\pi $$ and $$  g_{h Z^\prime Z^\prime} < \sqrt{4\pi}m_{Z^\prime}\sin\theta$$ 
 The value $g_{h Z^\prime Z^\prime}/m_{Z^\prime} = 1.0$ is chosen as a benchmark value for the generation 
@@ -283,7 +290,7 @@ Analyses should perform further studies, beyond those studies performed for the 
 		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp100/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
 	\hfill
-	\caption{Comparison of the kinematic distributions for the two leading $b-$ jets ()from the Higgs decay) in the vector $Z^\prime$ simplified model, 
+	\caption{Comparison of the kinematic distributions for the two leading $b-$jets (from the Higgs decay) in the vector $Z^\prime$ simplified model, 
 		when fixing the $Z^\prime$ mass to 100 GeV and varying the DM mass. 
 		\label{fig:VectorHbb_100}}
 \end{figure}
@@ -387,7 +394,7 @@ the results for this mixing angle according to the relevant cross-section. It ca
 that the kinematics of this model follows that of the equivalent jet+MET model: only small changes are observed
 in the on-shell region, while the relevant distributions diverge when the mediator is off-shell. 
 For this reason, the same grid in \mmed, \mdm as for the scalar mediator
-of the jet+MET search (Table~\ref{tab:mDMmmedScan_SP}) is chosen as a starting point. 
+of the jet+MET search (Table~\ref{tab:mDMmMedScan_SP}) is chosen as a starting point. 
 The Yukawa coupling to DM $y_{DM}$ is set to 1, the 
 new physics coupling between scalar and SM Higgs $b$ = 3. Results for other values can be obtained via a 
 rescaling of the results for these parameters. 
@@ -638,7 +645,7 @@ as long as $M_{DM}<M_{A^0}/2$ so that $A^0$ production is on-shell, as shown in 
   	\end{center}
   \end{figure}
   
-We recommend to produce signal events for a fixed $g_z=0.8$, $\tan{\beta}=1$ and $M_{DM}=100$~GeV. For these values, we scan the 2-D parameter space of ${M_{Z^\prime}, M_{A^0}}$ with $M_{Z^\prime}=600, 800, 1000, 1200, 1400$~GeV, and $M_{A^0}=300, 400, 500, 600, 700, 800$~GeV with $M_{A^0} < M_{Z^\prime}-m_h$, for a total of 24 points. The choice of scan is justified by the sensitivity study in~\ref{Berlin2014cfa}: the expected LHC sensitivity for Run-2 is up to $M_{Z^\prime} \sim 1.5$~TeV.
+We recommend to produce signal events for a fixed $g_z=0.8$, $\tan{\beta}=1$ and $M_{DM}=100$~GeV. For these values, we scan the 2-D parameter space of ${M_{Z^\prime}, M_{A^0}}$ with $M_{Z^\prime}=600, 800, 1000, 1200, 1400$~GeV, and $M_{A^0}=300, 400, 500, 600, 700, 800$~GeV with $M_{A^0} < M_{Z^\prime}-m_h$, for a total of 24 points. The choice of scan is justified by the sensitivity study in~\cite{Berlin:2014cfa}: the expected LHC sensitivity for Run-2 is up to $M_{Z^\prime} \sim 1.5$~TeV.
 For the parameter scan, the DM mass is fixed to 100 GeV. For two $M_{Z^\prime}$, $M_{A^0}$ value sets, we vary the DM mass to obtain sample cross section for rescaling results. 
 All LO cross sections for the various parameter scan points are reported in Appendix~\ref{app:EWSpecificModels_Appendix}.
 The parameter scan excludes the off-shell region, as the cross-sections are suppressed and the LHC would not have any
