--- a/doc/tex/ScalarModels.tex
+++ b/doc/tex/ScalarModels.tex
@@ -1,4 +1,4 @@
-\section{Spin-0 Mediators}
+\section{Spin-0 Mediators}\label{sec:scalar}
 
 One of the most straightforward Simplified Models to contemplate is connecting dark matter to the visible sector through a spin-0 mediator, either a scalar or a pseudoscalar. Such models have intriguing connections with Higgs physics, and can be viewed as generalizations of the Higgs Portal to dark matter. The most general scalar mediator models will of course have renormalizable interactions between the Standard Model Higgs and the new scalar $\phi$ or pseudoscalar $A$, as well as $\phi/A$ interactions with electroweak gauge bosons. Such interactions are model-dependent, often subject to constraints from electroweak-precision tests, and would suggest specialized searches which cannot be generalized to a broad class of models (unlike the $\slashed{E}_T$ plus jets searches, for example). As a result, for this class of simplified models with spin-0 mediators, we suggest focusing exclusively on the couplings to fermions, and induced couplings to gluons, leaving the possibilities opened up by couplings to the electroweak sector to the discussion of Higgs Portal dark matter.
 
