--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -19,7 +19,7 @@ An annihilation cross section consistent with the gamma-ray excess can be achiev
 
 \section{Parameter scan}
 
-The nature of the model doesn't allow to derive a simple scaling behaviour which would allow us reduce the number of points to be simulated. This is because of the interference of diagrams with QCD production of the mediator (which scale as $g^0$) with diagrams that scale with $g$.~\todo{Does the kinematic always change with mDM and coupling, in all cases? This model is close to a $t-$channel colored scalar mediator so the conclusions should be similar.}
+The nature of the model doesn't allow to derive a simple scaling behaviour which would allow us reduce the number of points to be simulated. This is because of the interference of diagrams with QCD production of the mediator (which scale as $g^0$) with diagrams that scale with $g$.~\Todo{Does the kinematic always change with mDM and coupling, in all cases? This model is close to a $t-$channel colored scalar mediator so the conclusions should be similar.]}
 
 The coupling can be chosen as a discrete set of values $g=0.5,1,2,3...$ for each mass point, which would allow a bound on $g$ to be determined.  The coupling could also be chosen to fullfill constraints from the relic density (see Appendix~\ref{app:Relic_Density_bFDM}, with corresponding cross sections in Tables~\ref{tab:g_relic_13T}-\ref{tab:g1_8T}). A sizable, $O(1)$ coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks.
 
@@ -62,10 +62,10 @@ Cross-sections for unity couplings can be found in Appendix~\ref{app:xsecs_bFDM}
 
 \section{Model implementation}
 
-\todo{Do you have to match with Pythia PS? Do you have any recommendations on the initial state PDFs?}
+\Todo{Do you have to match with Pythia PS? Do you have any recommendations on the initial state PDFs?}
 
 We simulate the model using the {\tt MG5\_aMC} v2.2.3. The corresponding card files can be found 
-on the Forum SVN repository~\ref{ForumSVN_DMSingleB}.
+on the Forum SVN repository~\cite{ForumSVN_DMSingleB}.
 
 A possible production configuration is:
 \vspace{0.3cm}
