--- a/doc/tex/TTBar_Xsecs_Appendix.tex
+++ b/doc/tex/TTBar_Xsecs_Appendix.tex
@@ -1,4 +1,4 @@
-\section{Relic density constraints for $b-$flavored Dark Matter}
+\section{\texorpdfstring{Relic density constraints for $b-$flavored Dark Matter}{Relic density constraints for b-flavored Dark Matter}}
 \label{app:Relic_Density_bFDM}
 
 For Dirac fermion DM the relic density is governed primarily by the $s$-wave annihilation cross section, which is given approximately given by:
@@ -21,7 +21,7 @@ Figure~\ref{fig:relic_weights} shows the weights obtained for various dark matte
 	\caption{Coupling constants required to obtain correct relic density in the early universe . \label{fig:relic_weights}}
 	\end{figure}	
 	
-\section{Cross sections for $b-$flavored Dark Matter}
+\section{\texorpdfstring{Cross sections for $b-$flavored Dark Matter}{Cross sections for b-flavored Dark Matter}}
 \label{app:xsecs_bFDM}
 
 \begin{table}[h]
@@ -179,8 +179,7 @@ Figure~\ref{fig:relic_weights} shows the weights obtained for various dark matte
 \end{table}
 
 
-
-\section{Cross sections for the $t\bar t$+DM scalar simplified model}
+\section{\texorpdfstring{Cross sections for the $t\bar t$+DM scalar simplified model}{Cross sections for the ttbar+DM scalar simplified model}}
 
 \begin{longtable}{lllll}
 	\caption{Cross section calculation for each coupling choice and minimal width assumption for the $t\bar t$+DM scalar simplified model grid}\\
@@ -855,7 +854,7 @@ Figure~\ref{fig:relic_weights} shows the weights obtained for various dark matte
 	3.5 & 1995 & 1000 & 1409 & 1.037e-05 $\pm$ 4.9e-08 \\
 \end{longtable}
 
-\section{Cross sections for the $b\bar b$+DM scalar simplified model}
+\section{\texorpdfstring{Cross sections for the $b\bar b$+DM scalar simplified model}{Cross sections for the bbbar+DM scalar simplified model}}
 
 \textbf{[TODO: add cross-sections, they will be available with plots]}
 
