--- a/doc/tex/EWSpecificModels_SVMediators.tex
+++ b/doc/tex/EWSpecificModels_SVMediators.tex
@@ -108,33 +108,33 @@ ranges from 1.05 to 1.5 with increasing mediator masses).
 \end{figure}
 
 Examples of relevant kinematic distributions for selected benchmark points are
-shown in Fig.~\ref{fig:DMV_EW_kinematics}. 
+shown in Fig.~\ref{fig:DMV_EW_kinematics_SVMed}. 
 leading-order cross-sections for the chosen 
 benchmark points are shown in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
 \begin{figure}[h!]
 	\centering  
 	\subfloat[Missing transverse momentum distribution for the photon+MET final state, for 
-	different mediator mass choices, for a DM mass of 10 GeV.\label{fig:DMV_EW_gamma_MET}]{%
+	different mediator mass choices, for a DM mass of 10 GeV.\label{fig:DMV_EW_gamma_MET_SVMed}]{%
 		\includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_dm10GeV}
 	}%TODO: add this + equivalent plot of MET to appendix
 	\hfill
 	\subfloat[Leading photon transverse momentum distribution for the photon+MET final state, 
-	for different DM mass choices, with a mediator mass of 1 TeV.\label{fig:DMV_EW_gamma_pT}]{%
+	for different DM mass choices, with a mediator mass of 1 TeV.\label{fig:DMV_EW_gamma_pT_SVMed}]{%
 		\includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_mV1000GeV}
 	}%TODO: add equivalent plot of MET to appendix
 	\hfill
 	\subfloat[Missing transverse momentum distribution for the leptonic Z+MET final state, 
-	for different mediator mass choices, for a DM mass of 15 GeV\label{fig:DMV_EW_Z_MET}]{%
+	for different mediator mass choices, for a DM mass of 15 GeV\label{fig:DMV_EW_Z_MET_SVMed}]{%
 		\includegraphics[width=0.45\textwidth]{figures/EW/pt_vv_Mx15}
 	}    
 	\hfill
-	\subfloat[Missing transverse momentum distribution for the hadronic W+MET final state.\label{fig:DMV_EW_Whad_MET}]{%
+	\subfloat[Missing transverse momentum distribution for the hadronic W+MET final state.\label{fig:DMV_EW_Whad_MET_SVMed}]{%
 		\includegraphics[width=0.47\textwidth]{figures/EW/monoWhad_Destructive/metPt}
 	}    
 	\caption{Kinematic distributions relevant for searches with W, Z and photons in the final state, 
 		for the simplified model with a vector mediator exchanged in the $s-$channel.}
-	\label{fig:DMV_EW_kinematics}
+	\label{fig:DMV_EW_kinematics_SVMed}
 \end{figure}
 
 \subsection{Colored scalar mediator exchanged in the t-channel}
@@ -176,4 +176,4 @@ The parameter scan is still under discussion~\Todo{The parameter scan,
 
 These models are generated at leading
 order with MadGraph 2.2.2, using Pythia8 for the parton shower.
-Parameter cards can be found on the Forum SVN repository~\cite{TODO}.
+Parameter cards can be found on the Forum SVN repository \textbf{[TODO~\cite{}]}.
