beginning to merge mandate with intro
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@177 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -17,8 +17,9 @@ Dark Matter models for the early stages of Run-2 at the LHC.
 
 What is the motivation for this report?
 
-First, the physics is compelling.   Measurements at the energy
-frontier can make quantitative statements about dark matter.
+First, the physics is compelling. Measurements at the energy frontier
+can make quantitative statements about the possible interactions of
+dark matter with the particles of the Standard Model.
 
 Second, in Run-1 at the LHC, there was confusion in the community
 over the interpretation of the data.
