--- a/doc/tex/SimplifiedModelsIntro.tex
+++ b/doc/tex/SimplifiedModelsIntro.tex
@@ -5,15 +5,57 @@
 {$LastChangedBy$}
 \svnid{$Id$}
 
-Many Run-1 results of dark matter searches were interpreted in the
-context of Effective Field Theory (EFT).  There were several reasons
-for this.  First, the presentation is model independent.   Secondly,
-the approach is economical, requiring only a few simulated datasets.
-Finally, at the time, there was no catalogue of alternative
-interpretations of the data.   The downside of the EFT approach is that
-many of the implicit limitations were not widely understood.
+Run 1 searches for 'mono-X' signatures at ATLAS and CMS employed an
+effective field theory \cite{Goodman:2010ku} to quantify the reach of
+the analyses and to allow comparison with direct dark matter detection
+experiments. There were several reasons for this.  First, the
+presentation is model independent.  Secondly, the approach is
+economical, requiring only a few simulated datasets.  Finally, at the
+time, there was no catalogue of alternative interpretations of the
+data. The downside of the EFT approach is that many of the implicit
+limitations were not widely understood.
 
-Since then, there has arisen a consensus on a handful of simple models
+From the Run 1 results, it has become clear that in certain cases
+\cite{Busoni:2013lha} that the LHC can directly probe additional
+mediating particles that the EFT neglects. While the EFT integrates
+out the degrees of freedom of the (heavy) intermediate particle,
+concrete "simplified" model with low-­mass mediators can provide a
+complementary interpretation. Those models can be used both to
+interpret mono-­X searches and to guide the design of complementary
+searches for additional signatures.
+
+To forum a consensus on the simplified models most appropriate to use,
+at the end of 2014 ATLAS and CMS organized a forum, the ATLAS-­CMS
+Dark Matter Forum, whereby all interested experimenters from both
+collaborations would discuss a minimal common set of Run-2 dark matter
+interpretations with the participation of experts on theories of dark
+matter. This is the final report of that forum.
+
+To achieve a true consenus with only a few months before Run 2 would
+bein, it was important to narrow the scope and timescale of this
+forum. These were the goals:
+
+\begin{enumerate}
+\item A prioritized, small set of benchmark simplified models should
+  be agreed upon by both collaborations for Run-2 searches.
+\item The matrix element implementation of the simplified models
+  should be standardized, and other common technical details (order of
+  the calculation, showering) harmonized as much as practical. It
+  would be desirable to have a common choice of LO/NLO, ME-­parton
+  shower matching and merging, factorization and renormalization
+  scales for each of the simplified models. This will also lead to a
+  single set of theory uncertainties, which will be easier to deal
+  with when comparing results from the two collaborations.
+\item The forum could also discuss the conditions under which the EFT
+  interpretation may still be desirable.
+\item The forum should prepare a report summarising these items,
+  suitable both as a reference for the internal ATLAS and CMS
+  audiences and as an explanation for theory and non-collider
+  readers. This report represents the views of the participants of the
+  forum.
+\end{enumerate}
+
+There has indeed arisen a consensus on a handful of simple models
 of dark matter production that have a hope of mapping into a more
 complete theory.  This document describes them.  Also, in some cases,
 there is no good alternative to using EFT.  Even in the case of simplified
@@ -21,8 +63,11 @@ models, we recommend showing the EFT limit.
 
 Assumptions and simplifications made in this report:
 \begin{itemize}
- \item choice of Dark Matter type: Dirac (unless specified otherwise) and what we might be missing
- \item Minimal Flavor Violation (MFV) -- new physics appears only through Yukawa couplings -- and what we might be missing
- \item minimal width for mediators
- \item minimal particle content
+\item choice of Dark Matter type: Dirac (unless specified otherwise)
+  and what we might be missing
+\item Minimal Flavor Violation (MFV) -- new physics appears only
+  through Yukawa couplings -- and what we might be missing
+\item minimal width for mediators
+\item minimal particle content
 \end{itemize}
+\todo{Explain the above}
